fix: pane layout broken when wrap line is off

--- a/packages/hoppscotch-common/assets/scss/styles.scss
+++ b/packages/hoppscotch-common/assets/scss/styles.scss
@@ -481,6 +481,9 @@ pre.ace_editor {
 }
 
 .cm-editor {
+  .cm-content {
+    @apply whitespace-normal;
+  }
   .cm-line::selection {
     @apply bg-accentDark #{!important};
     @apply text-accentContrast #{!important};
